k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automart
  labels:
    app: automart
